--- a/statechart.html
+++ b/statechart.html
@@ -247,6 +247,13 @@ SOFTWARE.
         </dd>
         <pre>msg.payload = [{series:"A",value:123,state:true},{series:"D",value:32,state:false}]</pre>           
     </dl>
+    <dl class="message-properties">
+        <dt>title
+            <span class="property-type">string</span> 
+        </dt>
+        Title of chart
+
+    </dl>
 
    
 
